--- a/src/packs/ship-fitting/Extended life support.yml
+++ b/src/packs/ship-fitting/Extended life support.yml
@@ -3,7 +3,7 @@ data:
   cost: 5000
   costMultiplier: true
   description: >-
-    The ship can be designed to accomodate a larger number of crew
+    The ship can be designed to accommodate a larger number of crew
     or passengers. Extended life support can be fitted multiple times;
     each time, the maximum crew rating of the ship increases by 100%
     of its normal maximum. Thus, a free merchant who installs this
