--- a/src/packs/ship-fitting/Survey sensor array.yml
+++ b/src/packs/ship-fitting/Survey sensor array.yml
@@ -9,7 +9,7 @@ data:
     greatly enhance the ship's sensor abilities, allowing for finely-detailed
     mapping of objects and planets, along with broad spectrum communications
     analysis. They also improve attempts to detect other craft when scanning
-    a region for stealthy vessels. Any rolls with servey sensor arrays
+    a region for stealthy vessels. Any rolls with survey sensor arrays
     add +2 to skill checks.
   effect: Improved planetary sensory array
   mass: 1.0
