--- a/src/packs/sample-ships/shuttle.yml
+++ b/src/packs/sample-ships/shuttle.yml
@@ -26,7 +26,7 @@ data:
   crewSkillBonus: 1
   shipClass: fighter
   shipHullType: shuttle
-  amountOwed: 210000
+  cost: 210000
   maintenanceCost: 10500
   operatingCost: 43800
   maintenanceMonths: 6
