--- a/src/packs/ship-fitting/Boarding tubes.yml
+++ b/src/packs/ship-fitting/Boarding tubes.yml
@@ -5,7 +5,7 @@ data:
   description: >-
     Armored tubes equipped with laser cutter apertures an be used
     to forcibly invade a hostile ship, provided the target's engines
-    have been disabled. Ships without boarding tybes have to send
+    have been disabled. Ships without boarding tubes have to send
     invaders across empty space to either make an assault on a doubtless
     heavily-guarded airlock or cut their way in through the hull
     with laser cutters and half an hour of work.
