--- a/src/packs/ship-fitting/Cargo space.yml
+++ b/src/packs/ship-fitting/Cargo space.yml
@@ -5,7 +5,7 @@ data:
   description: >-
     Free mas can be traded for pressurized cargo space. Tracked by weight
     for convenience, one cubic meter is usually one ton, with most vehicles
-    requiring ten tons when loaded, tanks taking 25, and aricraft or mechs
+    requiring ten tons when loaded, tanks taking 25, and aircraft or mechs
     taking up 50 tons of cargo space. One point of free mass grants 2 tons
     of cargo space in a fighter, 20 tons in a frigate, 200 tons in a cruiser
     and 2000 tons in a capital-class ship. This fitting can be purchased
