--- a/src/packs/ship-fitting/Cold sleep pods.yml
+++ b/src/packs/ship-fitting/Cold sleep pods.yml
@@ -4,7 +4,7 @@ data:
   costMultiplier: true
   description: >-
     These stasis pods can keep a subject alive for centuries
-    prodived that the ship's power doesn't fail. Each installation
+    provided that the ship's power doesn't fail. Each installation
     allows for keeping a number of people equal to the ship's maximum
     crew in stasis indefinitely. This fitting can be installed
     multiple times.
