--- a/src/packs/ship-fitting/Colony core.yml
+++ b/src/packs/ship-fitting/Colony core.yml
@@ -6,8 +6,8 @@ data:
     The ship has been designed to act as the core of a future settlement.
     Once this fitting is engaged, the ship ceases to be operational as a
     starship, and builds out into a set of habitats, hydroponic gardens,
-    fusion plants, and living spaces siffucient to support up to five times
-    its maximum crew, inclugind enough fabrication and workshop facilities
+    fusion plants, and living spaces sufficient to support up to five times
+    its maximum crew, including enough fabrication and workshop facilities
     to keep the settlement operational under normal conditions. The settlement
     can be a deep-space hab, orbital installation, or planetary settlement.
     In the latter case, the ship must land to form the settlement; even ships
