--- a/src/packs/ship-fitting/Exodus bay.yml
+++ b/src/packs/ship-fitting/Exodus bay.yml
@@ -6,7 +6,7 @@ data:
     These banked rows of compressed cold sleep pods are designed
     to carry enormous numbers of people in extended hibernation,
     most often colonists to some new homeworld or escapees from
-    soem stellar disaster. A cruiser can carry up to 1000 colonists
+    some stellar disaster. A cruiser can carry up to 1000 colonists
     in stasis, while a capital ship can handle up to 5000. Each further
     time this fitting is selected, these numbers double. These pods put
     Their inhabitants into very deep hibernation so as to minimize the
