--- a/src/packs/ship-fitting/Smuggler's hold.yml
+++ b/src/packs/ship-fitting/Smuggler's hold.yml
@@ -9,7 +9,7 @@ data:
     in a cruiser, or 200 tons in a capital ship. Cargo in smuggler's hold
     will never be found by a standard customs inspection. Careful investigation
     by a suspicious official can find it on a difficulty 10 check using their
-    Wis/Notice skill, and a week-long searh one step short of disassembly
+    Wis/Notice skill, and a week-long search one step short of disassembly
     will find it on a difficulty 7 check.
   effect: Small amount of well-hidden cargo space
   mass: 1.0
