small clean up. getting support working -- wip.

--- a/src/template.yml
+++ b/src/template.yml
@@ -188,6 +188,7 @@ Actor:
     npcCommandPoints: 0
     crewSkillBonus: 0
     actionsTaken: []
+    supportingDept: ""
   mech:
     templates:
       - vehiclebase
