--- a/src/template.yml
+++ b/src/template.yml
@@ -7,6 +7,7 @@ Actor:
     - mech
     - drone
     - vehicle
+    - faction
   templates:
     vehiclebase: 
       cost: 0
@@ -136,7 +137,17 @@ Actor:
         label: Bio/Notes
         contents: ""
   faction:
-    name: ""
+    description: ""
+    health:
+      value: 1
+      max: 1
+    forceRating: 1
+    cunningRating: 1
+    wealthRating: 1
+    facCreds: 1
+    xp: 0
+    homeworld: ""
+    tags: []
   ship:
     templates:
       - vehiclebase
@@ -240,6 +251,7 @@ Item:
     - shipWeapon
     - shipDefense
     - shipFitting
+    - asset
   templates:
     modBase:
       pretech:
@@ -348,6 +360,20 @@ Item:
     templates:
       - description
       - modBase
+  asset:
+    templates:
+      - description
+    health:
+      value: 1
+      max: 1
+    cost: 1
+    baseOfInfluence: false
+    tl: 0
+    attackTarget: ""
+    attackDamage: ""
+    counter: ""
+    note: ""
+    turnRoll: ""
   skill:
     templates:
       - description
