--- a/src/packs/assets/Pretech Manufactory.yml
+++ b/src/packs/assets/Pretech Manufactory.yml
@@ -8,7 +8,10 @@ data:
   cost: 25
   counter: ''
   description: >-
-    Description placeholder
+    Rare, precious examples of functioning pretech industrial facilities, retrofitted
+    to work without the benefit of specialized psychic disciplines. As an action,
+    the owning faction can roll 1d8 for a Pretech Manufactory, and gain half that
+    many FacCreds, rounded up.
   health:
     max: 16
     value: 16
