--- a/src/packs/assets/Bank.yml
+++ b/src/packs/assets/Bank.yml
@@ -8,7 +8,9 @@ data:
   cost: 12
   counter: ''
   description: >-
-    Description placeholder
+    Once per turn, the faction can ignore one cost or FacCred loss imposed by another
+    faction. This does not require an action. Multiple bank assets allow multiple
+    losses to be ignored.
   health:
     max: 8
     value: 8
