--- a/src/packs/assets/Book of Secrets.yml
+++ b/src/packs/assets/Book of Secrets.yml
@@ -21,7 +21,11 @@ data:
   note: S
   rating: 7
   tl: 4
-  turnRoll: ''
+  turnRoll: >-
+    Once per turn,
+    a Book of Secrets allows the faction to reroll one die for an action taken on
+    that world or force an enemy faction to reroll one die. This reroll can only be
+    forced once per turn, no matter how many Books of Secrets are owned.
   type: Tactic
   unusable: false
 img: systems/swnr/assets/icons/hawkin/cunning.png
