--- a/src/packs/assets/Commodities Broker.yml
+++ b/src/packs/assets/Commodities Broker.yml
@@ -11,7 +11,7 @@ data:
     They substantially lessen the cost of large-scale investments by timing materials
     purchases properly. As an action, the owner of a commodities broker can roll 1d8;
     that many FacCreds are subtracted from the cost of their next asset purchase,
-    down to a minimum of half normal price, rounded down.
+    down to a minimum of half normal price, rounded down. Roll: [[1d8]]
   health:
     max: 10
     value: 10
