--- a/src/packs/assets/Local Investments.yml
+++ b/src/packs/assets/Local Investments.yml
@@ -20,7 +20,11 @@ data:
   note: S
   rating: 1
   tl: 2
-  turnRoll: ''
+  turnRoll: >-
+    These give the faction substantial influence over the commerce on a world. Any
+    other faction that tries to buy an asset on that planet must pay one extra FacCred.
+    This money is not given to the investments' owner, but is lost. This penalty is
+    only applied once.
   type: Facility
   unusable: false
 img: systems/swnr/assets/icons/hawkin/wealth.png
