--- a/src/packs/assets/Medical Center.yml
+++ b/src/packs/assets/Medical Center.yml
@@ -20,7 +20,11 @@ data:
   note: S
   rating: 4
   tl: 4
-  turnRoll: ''
+  turnRoll: >-
+    Salvage and repair damaged assets. Once between turns, if a Special Forces or
+    Military Unit asset on the world is destroyed, the faction may immediately pay
+    half its purchase cost to restore it with one hit point. Any Repair Asset action
+    taken on that world costs one less FacCred for Special Forces and Military Units.
   type: Facility
   unusable: false
 img: systems/swnr/assets/icons/hawkin/wealth.png
