--- a/src/packs/assets/Seditionists.yml
+++ b/src/packs/assets/Seditionists.yml
@@ -11,7 +11,7 @@ data:
     These asset sap a target's loyalty and will to obey. For a cost of 1d4 FacCreds,
     the Seditionists can attach themselves to an enemy asset. Until they attach to
     a different asset or no longer share the same planet, the affected asset cannot
-    attack. If the asset is destroyed, the Seditionists survive.
+    attack. If the asset is destroyed, the Seditionists survive. Roll: [[1d4]]
   health:
     max: 8
     value: 8
