--- a/src/packs/assets/Transport Lockdown.yml
+++ b/src/packs/assets/Transport Lockdown.yml
@@ -11,7 +11,7 @@ data:
     These techniques involve selective pressure on local routing and shipping companies.
     On a successful Cunning vs. Cunning attack against a rival faction, the rival
     faction cannot transport assets onto that planet without spending 1d4 FacCreds
-    and waiting one turn.
+    and waiting one turn. Roll: [[1d4]]
   health:
     max: 10
     value: 10
