--- a/src/packs/assets/Venture Capital.yml
+++ b/src/packs/assets/Venture Capital.yml
@@ -11,7 +11,7 @@ data:
     This asset grows resources out of seemingly nowhere, harvesting the best of entrepreneurship
     for the faction's benefit. As an action, venture capital can be tapped. 1d8 is
     rolled; on a 1, the asset is destroyed, while on a 2-3 one FacCred is gained,
-    4-7 yields two FacCreds and 8 grants three FacCreds.
+    4-7 yields two FacCreds and 8 grants three FacCreds. Roll: [[1d8]]
   health:
     max: 10
     value: 10
