--- a/src/packs/assets/Blackmail.yml
+++ b/src/packs/assets/Blackmail.yml
@@ -2,7 +2,7 @@ data:
   assetType: cunning
   attackDamage: 1d4+1
   attackSource: cunning
-  attackSpecial: ''
+  attackSpecial: 'Any attempt to attack or defend against Blackmail loses any bonus dice earned by tags'
   attackTarget: cunning
   baseOfInfluence: false
   cost: 4
