--- a/src/packs/assets/Lobbyists.yml
+++ b/src/packs/assets/Lobbyists.yml
@@ -1,8 +1,13 @@
 data:
   assetType: cunning
-  attackDamage: special
+  attackDamage: '0'
   attackSource: cunning
-  attackSpecial: ''
+  attackSpecial: >-
+    Usable to block the governmental permission that is sometimes required to buy
+    an asset or transport it into a system. When a rival faction gains permission
+    to do so, the Lobbyists can make an immediate Cunning vs. Cunning test against
+    the faction; if successful, the permission is withdrawn and cannot be re-attempted
+    until next turn.
   attackTarget: cunning
   baseOfInfluence: false
   cost: 4
