--- a/src/packs/assets/Party Machine.yml
+++ b/src/packs/assets/Party Machine.yml
@@ -7,13 +7,14 @@ data:
   baseOfInfluence: false
   cost: 8
   counter: 1d6
-  description: "Political blocks control particular cities or regions\u2026 blocks\
-    \ that are firmly in control of the faction. Each turn, a Party Machine provides\
-    \ 1 FacCred to its owning faction."
+  description: >- 
+    Political blocks control particular cities or regions blocks
+    that are firmly in control of the faction. Each turn, a Party Machine provides
+    1 FacCred to its owning faction.
   health:
     max: 10
     value: 10
-  income: 0
+  income: 1
   maintenance: 0
   note: S
   rating: 4
