--- a/src/packs/assets/Postech Industry.yml
+++ b/src/packs/assets/Postech Industry.yml
@@ -11,7 +11,7 @@ data:
     As an action, the owning faction can roll 1d6 for a Postech Industry asset. On
     a 1, one FacCred is lost, on a 2-4 one FacCred is earned, and a 5-6 returns two
     FacCreds. If money is lost and no resources are available to pay it, the Postech
-    Industry is destroyed.
+    Industry is destroyed. Roll: [[1d6]]
   health:
     max: 4
     value: 4
