--- a/src/packs/assets/Saboteurs.yml
+++ b/src/packs/assets/Saboteurs.yml
@@ -2,7 +2,10 @@ data:
   assetType: cunning
   attackDamage: 2d4
   attackSource: cunning
-  attackSpecial: ''
+  attackSpecial: >-
+    Minions rained in launching strikes against enemy operations. An asset attacked
+    by saboteurs cannot apply any Use Asset Ability action until the start of the
+    attacking faction's next turn. This applies whether or not the attack was successful.
   attackTarget: cunning
   baseOfInfluence: false
   cost: 5
