--- a/src/packs/pharmaceuticals/Psych.yml
+++ b/src/packs/pharmaceuticals/Psych.yml
@@ -5,10 +5,14 @@ data:
     bundled: false
   cost: 25
   description: >-
-    Pretech Cosmetic (None): Before the Silence stims existed for a host of
-    cosmetic, hygiene, and health purposes. While these effects are trivial, the
-    basic pretech stim substrate also works to heal 1d6 lost hit points in the
-    user at a cost of 1 System Strain.
+    Psych (None): A military drug duplicated in rougher form by many street
+    chemists, Psych fills the user with an intense sense of confidence and
+    reckless courage. Unfortunately, it also cripples their judgment regarding
+    danger. A person affected by Psych immediately gains a Morale score of 12
+    and a +1 bonus on all skill checks, but will ignore cover during combat and
+    cannot decide not to attempt a skill check after learning its difficulty.
+    The effect lasts fifteen minutes, adds 1 System Strain to the user, and is
+    highly psychologically addictive.
   encumbrance: 0
   location: other
   quality: stock
