new property on skill adds to shock

--- a/src/template.yml
+++ b/src/template.yml
@@ -299,6 +299,7 @@ Item:
     secondStat: none
     skill: ""
     skillBoostsDamage: false
+    skillBoostsShock: false
     shock:
       dmg: 0
       ac: 15
