--- a/src/system.yml
+++ b/src/system.yml
@@ -2,9 +2,9 @@ name: swnr
 title: "Stars Without Number: Revised (wsAI Alter.)"
 description: >-
   BETA: Stars Without Number: Revised system. This is an alternate version
-version: 0.7.0
+version: 0.7.1
 author: Spice_King + wintersleepAI
-scripts: ["lib/sortablejs/Sortable.min.js"]
+scripts: ["lib/sortable/Sortable.min.js"]
 initiative: 1d8+@stats.dex.mod
 esmodules:
   - swnr.js
@@ -216,7 +216,7 @@ compatibleCoreVersion: 9.269
 url: "https://github.com/wintersleepAI/foundry-swnr"
 manifest: >-
   https://github.com/wintersleepAI/foundry-swnr/releases/latest/download/system.json
-download: "https://github.com/wintersleepAI/foundry-swnr/releases/download/v0.7.0-wsAI/v0.7.0-wsAI.zip"
+download: "https://github.com/wintersleepAI/foundry-swnr/releases/download/v0.7.1-wsAI/v0.7.1-wsAI.zip"
 license: "https://github.com/wintersleepAI/foundry-swnr/blob/master/LICENSE.txt"
 readme: ""
 bugs: "https://github.com/wintersleepAI/foundry-swnr/issues"
