--- a/src/template.yml
+++ b/src/template.yml
@@ -325,7 +325,7 @@ Item:
       max: 2
     damage: d4
     quantity: 1
-    save: none
+    save: null
   power:
     templates:
       - description
